# diffphysdrone_pipeline_inspection

./: .gitignore  README.md
docs/: thesis_experiment_workflow.md
sim2sim/drone_airsim/pipe_swarm/: Readme.md  eval.py  pipe_scene.py  wind_utils.py
sim2sim/drone_airsim/swarm/: Readme.md  batch_wind_test.sh  eval.py
sim2sim/drone_genesis/: hover_test.py
sim2sim/drone_genesis/LidarSensor/LidarSensor/: lidar_sensor.py
sim2sim/drone_genesis/LidarSensor/LidarSensor/sensor_kernels/: lidar_kernels_taichi.py  lidar_kernels_taichi_bvh.py  lidar_kernels_warp.py
sim2sim/drone_genesis/assets/drone_ex1/: drone_ex1.urdf
sim2sim/drone_genesis/depth_camera/: README.md
sim2sim/drone_genesis/depth_camera/nav/: env.py  eval.py
sim2sim/drone_genesis/depth_camera/nav/config/: nav_eval.yaml
sim2sim/drone_genesis/depth_camera/swarm/: env.py  eval.py
sim2sim/drone_genesis/depth_camera/swarm/config/: swarm_eval.yaml
sim2sim/drone_genesis/lidar_depth_fusion/: README.md  batch_eval.py  env.py  eval.py
sim2sim/drone_genesis/lidar_depth_fusion/config/: nav_eval.yaml
sim2sim/drone_genesis/lidar_navrl/: README.md  batch_eval.py  compare.py  env.py  eval.py
sim2sim/drone_genesis/lidar_navrl/config/: nav_eval.yaml
sim2sim/drone_genesis/utils/: controller.py  mixer.py
sim2sim/pipeline_inspection/: README.md
sim2sim/pipeline_inspection/assets/maps/: pipe_factory_local.pcd
sim2sim/pipeline_inspection/baselines/px4_real_control_example/scripts/: hover_force.py  hover_in_position.py
sim2sim/pipeline_inspection/baselines/se3_controller/src/: se3_ctrl.cpp
sim2sim/pipeline_inspection/docker/: Dockerfile.noetic
sim2sim/pipeline_inspection/ros/: README.md
sim2sim/pipeline_inspection/ros/bspline_target_bridge/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/bspline_target_bridge/launch/: bridge.launch
sim2sim/pipeline_inspection/ros/bspline_target_bridge/scripts/: bspline_target_bridge.py
sim2sim/pipeline_inspection/ros/e2e_px4_controller/: CMakeLists.txt  package.xml  setup.py
sim2sim/pipeline_inspection/ros/e2e_px4_controller/launch/: controller.launch
sim2sim/pipeline_inspection/ros/e2e_px4_controller/scripts/: e2e_px4_controller.py
sim2sim/pipeline_inspection/ros/e2e_px4_controller/src/e2e_px4_controller/: model.py  rotation.py
sim2sim/pipeline_inspection/ros/global_astar_planner/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/global_astar_planner/launch/: planner.launch
sim2sim/pipeline_inspection/ros/global_astar_planner/src/: global_astar_planner_node.cpp
sim2sim/pipeline_inspection/ros/global_path_target_bridge/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/global_path_target_bridge/launch/: bridge.launch
sim2sim/pipeline_inspection/ros/global_path_target_bridge/scripts/: global_path_target_bridge.py
sim2sim/pipeline_inspection/ros/livox_ros_driver2/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/livox_ros_driver2/msg/: CustomMsg.msg
sim2sim/pipeline_inspection/ros/localization_mode_manager/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/localization_mode_manager/launch/: mode_manager.launch
sim2sim/pipeline_inspection/ros/localization_mode_manager/scripts/: gnss_fault_injector.py  gnss_mode_metrics_recorder.py  localization_mode_manager.py
sim2sim/pipeline_inspection/ros/map_tools/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/map_tools/src/: prepare_pcd_map.cpp
sim2sim/pipeline_inspection/ros/navigation_bringup/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/navigation_bringup/launch/: e2e_navigation.launch  ego_px4.launch  global_astar_navigation.launch  gnss_mode_test.launch  localization.launch  mapping.launch  pipe_factory_mapping.launch  pipe_factory_navigation.launch  point_lio_mapping.launch  point_lio_relocalization.launch
sim2sim/pipeline_inspection/ros/navigation_bringup/scripts/: closed_loop_metrics_recorder.py  global_planning_metrics_recorder.py  point_lio_metrics_recorder.py  pointcloud2livox_wrapper.py
sim2sim/pipeline_inspection/ros/navigation_bringup/urdf/: depth_camera_gazebo_snippet.xacro
sim2sim/pipeline_inspection/ros/pcd_localization/: CMakeLists.txt  package.xml
sim2sim/pipeline_inspection/ros/pcd_localization/src/: localization_node.cpp
sim2sim/pipeline_inspection/sim/worlds/: chemical_plant_local.world  industrial_local.world  pipe_factory_local.world  powerplant_local.world
sim2sim/pipeline_inspection/tools/: bootstrap_px4_noetic.sh  create_nav_integration_ws.sh  generate_pipe_factory_pcd.py  install_depth_camera_model.sh  offboard_preflight.sh  pointcloud2livox.py  run_point_lio_sitl_smoke.sh  sitl_square_mission.py  use_env.sh
sim2sim/pipeline_inspection/tools/controller/: keyboard_teleop_pos_cmd.py  manual_px4_keyboard_teleop.py
tools/: export_airsim_swarm_metrics.py  export_genesis_eval_metrics.py  export_thesis_training_metrics.py
training_code/: env_cuda.py  main_cuda.py
training_code/src/: quadsim.cpp  quadsim_kernel.cu
training_code/training_tasks/common/: diffphys_rollout.py  ppo_buffer.py  ppo_loop.py  ppo_model.py  robust_target_hover.py  scene_visualization.py  train_loop.py
training_code/training_tasks/depth_camera/: train.py
training_code/training_tasks/depth_camera/configs/: robust_baseline.args  robust_target_hover.args  rth_normal.args
training_code/training_tasks/depth_camera_ppo/: train.py
training_code/training_tasks/depth_camera_ppo/configs/: multi_agent.args  robust_baseline.args
training_code/training_tasks/lidar_depth_fusion/: model.py  train.py
training_code/training_tasks/lidar_depth_fusion/configs/: multi_agent.args  robust_baseline.args  robust_target_hover.args  rth_normal.args  single_agent.args
training_code/training_tasks/lidar_depth_fusion_swc_dp/: __init__.py  train.py
training_code/training_tasks/lidar_depth_fusion_swc_dp/configs/: config_rth.yaml
training_code/training_tasks/lidar_navrl/: env.py  model.py  train.py
training_code/training_tasks/lidar_navrl/configs/: multi_agent.args  robust_baseline.args  single_agent.args
(+8 files in other folders)
