<?xml version="1.0"?>
<package format="2">
  <name>global_astar_planner</name>
  <version>0.1.0</version>
  <description>Static PCD-map global A* planner publishing nav_msgs/Path.</description>
  <maintainer email="todo@example.com">pipeline_inspection</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
</package>
