<?xml version="1.0"?>
<package format="2">
  <name>livox_ros_driver2</name>
  <version>0.0.1</version>
  <description>Minimal Livox CustomMsg definitions for simulation/integration builds.</description>
  <maintainer email="todo@example.com">pipeline_inspection</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
