<?xml version="1.0"?>
<package format="2">
  <name>map_tools</name>
  <version>0.1.0</version>
  <description>PCD map preparation utilities for the PX4/FAST-LIO/E2E navigation stack.</description>
  <maintainer email="todo@example.com">pipeline_inspection</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
</package>
